Fixed text clipping in title, Robustified css

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -3,23 +3,33 @@
 
 body {
   background-image: url('assets/pattern.svg');
-  background-repeat: repeat; /* Repeat the background */
+  background-repeat: repeat;
   background-size: 20px;
 }
 
 .title-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 10px;
 }
 
 .title-main {
   font-size: 4em;
   font-weight: 600;
+  background: -webkit-gradient(linear, left top, right top, from(#e67e22), to(#f1c40f));
+  background: -o-linear-gradient(left, #e67e22, #f1c40f);
   background: linear-gradient(to right, #e67e22, #f1c40f);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+          background-clip: text;
+  color: transparent;
   letter-spacing: -0.05em;
   padding: 2px;
   line-height: 1;
@@ -27,15 +37,23 @@ body {
 
 @media only screen and (max-width: 768px) {
   .title-parent {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     gap: 10px;
   }
 }
 
 .image-map {
-  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+          box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
   border-radius: 10px;
 }
 
